# warp-protocol

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  package.json  tsconfig.json  turbo.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-devnet.yml  labeler.yml  release.yml  stale.yml
benchmarks/: api-response-time.md  classifier-latency.md  scanner-throughput.md  verdict-engine-overhead.md
docs/: api-reference.md  architecture.md  attestation-schema.md  classification.md  deployment-guide.md  integration-guide.md  model-training-guide.md  rate-limits.md  websocket-protocol.md
docs/adr/: adr-002.md  adr-007.md  adr-012.md  adr-017.md  adr-022.md  adr-027.md
examples/: batch-query.sh  query-agent.py  query-agent.ts
monitoring/: README.md  alerts.yml  grafana-dashboard.json  prometheus.yml
programs/warp-attestation/: Cargo.toml
programs/warp-attestation/src/: error.rs  lib.rs  state.rs
scripts/: backfill.ts  deploy.sh  export-verdicts.ts  health-check.sh  migrate.ts  rotate-keys.sh  seed-db.ts  validate-model.py
tests/: api.test.ts  attestation.test.ts  batch-query.test.ts  calibration.test.ts  classifier.test.ts  features.test.ts  feed.test.ts  model-inference.test.ts  scanner.test.ts  sdk.test.ts  signal-extraction.test.ts  verdict-engine.test.ts
(+55 files in other folders)
